--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
+    "@stripe/react-stripe-js": "^1.15.0",
+    "@stripe/stripe-js": "^1.44.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.3",
     "firebase": "^9.6.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,6 +23,7 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.6",
     "sass": "^1.49.9",
+    "stripe": "^11.1.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
